CS102_Projects/C15/compiling_error.txt
C:\Users\James\Documents\GitHub\school\CS102_Projects\C15\C15_P1.cpp: In function 'int main()':
C:\Users\James\Documents\GitHub\school\CS102_Projects\C15\C15_P1.cpp:29:10: error: 'file' was not declared in this scope
     stat(file, &buf) == 0);
          ^~~~
C:\Users\James\Documents\GitHub\school\CS102_Projects\C15\C15_P1.cpp:29:17: error: 'buf' was not declared in this scope
     stat(file, &buf) == 0);
                 ^~~
